--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="facturación electrónica, gestión de ventas, gestión de inventario, gestión de clientes, gestión de pedidos, gestión de inventario, gestión de clientes, gestión de pedidos, gestión de facturación" />
+    <meta name="description" content="Fudi es una plataforma de facturación electrónica y gestión de ventas para tu negocio. Con Fudi, puedes gestionar tus ventas, inventario y clientes de forma fácil y eficiente." />
     <title>Fudi</title>
   </head>
   <body>
