meta keyword and description optimized

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="facturación electrónica, gestión de ventas, gestión de inventario, gestión de clientes, gestión de pedidos, gestión de inventario, gestión de clientes, gestión de pedidos, gestión de facturación" />
-    <meta name="description" content="Fudi es una plataforma de facturación electrónica y gestión de ventas para tu negocio. Con Fudi, puedes gestionar tus ventas, inventario y clientes de forma fácil y eficiente." />
+    <meta name="keywords" content="factura, boleta electrónica, emitir factura electrónica, emitir boleta electrónica, facturación gratuita, facturacion electronica sunat, sunat, boleta electronica sunat" />
+    <meta name="description" content="Emite factura y boleta electrónica SUNAT gratis con Fudi. Plataforma de facturación electrónica fácil para gestionar ventas, inventario y clientes de tu negocio." />
     <title>Fudi</title>
   </head>
   <body>
