password new fields and features, some style fixes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="factura, boleta electrónica, emitir factura electrónica, emitir boleta electrónica, facturación gratuita, facturacion electronica sunat, sunat, boleta electronica sunat" />
     <meta name="description" content="Emite factura y boleta electrónica SUNAT gratis con Fudi. Plataforma de facturación electrónica fácil para gestionar ventas, inventario y clientes de tu negocio." />
-    <title>Fudi</title>
+    <title>Facturación Electrónica al instante | Fudi</title>
   </head>
   <body>
     <div id="root"></div>
