--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="factura, boleta electrónica, emitir factura electrónica, emitir boleta electrónica, facturación gratuita, facturacion electronica sunat, sunat, boleta electronica sunat" />
-    <meta name="description" content="Emite factura y boleta electrónica SUNAT gratis con Fudi. Plataforma de facturación electrónica fácil para gestionar ventas, inventario y clientes de tu negocio." />
+    <meta name="keywords" content="factura, boleta electrónica, emitir factura electrónica, emitir boleta electrónica, facturación gratuita, facturacion electronica sunat, sunat, boleta electronica sunat, facturacion electronica restaurante" />
+    <meta name="description" content="Emite factura y boleta electrónica SUNAT gratis con Fudi. Plataforma de facturación electrónica fácil para gestionar restaurantes. Lleva el control de tus ventas, inventario y clientes de tu restaurante." />
     <title>Facturación Electrónica al instante | Fudi</title>
   </head>
   <body>
